[gd_scene load_steps=8 format=2]

[ext_resource path="res://_MyContent/Scenes/Roboto.gd" type="Script" id=1]
[ext_resource path="res://_MyContent/Meshes/Roboto_Goblin.obj" type="ArrayMesh" id=2]

[sub_resource type="SpatialMaterial" id=23]
albedo_color = Color( 0.0470588, 0.462745, 0, 1 )

[sub_resource type="SpatialMaterial" id=22]
albedo_color = Color( 0.396078, 0, 0.752941, 1 )

[sub_resource type="BoxShape" id=19]
extents = Vector3( 3.04766, 5.1382, 1 )

[sub_resource type="BoxShape" id=21]
extents = Vector3( 1, 3.49409, 3.58717 )

[sub_resource type="Curve3D" id=20]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -0.92523, -2.944, 0.00474703, 0, 0, 0, 0, 0, 0, -8.62838, -2.92506, 0.0568142, 0, 0, 0, 0, 0, 0, -11.3964, -2.81207, 0.0118097, 0, 0, 0, 0, 0, 0, -27.499, -1.38649, 0.042886, 0, 0, 0, 0, 0, 0, -48.0662, 2.11125, 0.0428858, 0, 0, 0, 0, 0, 0, -61.7351, 7.27043, 0.0428856 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0 )
}

[node name="Roboto" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.5349, 0 )
script = ExtResource( 1 )

[node name="Body" type="Spatial" parent="."]

[node name="KinematicBody" type="KinematicBody" parent="Body"]
transform = Transform( -3.24408e-08, 0, 0.742158, 0, 0.742158, 0, -0.742158, 0, -3.24408e-08, -62.9618, 0, -0.0116615 )

[node name="MeshInstance" type="MeshInstance" parent="Body/KinematicBody"]
transform = Transform( 0.999995, -0.0030607, 0.00107692, 0.00306218, 0.999994, -0.00137745, -0.00107271, 0.00138073, 0.999999, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = SubResource( 23 )
material/1 = SubResource( 22 )
material/2 = null
material/3 = null
material/4 = null

[node name="CollisionShape" type="CollisionShape" parent="Body/KinematicBody"]
shape = SubResource( 19 )

[node name="Area" type="Area" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -63.5681, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Body/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.568668, 0.268287, 0 )
shape = SubResource( 21 )

[node name="SpotLight" type="SpotLight" parent="Body"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -53.4654, 0.268287, 0 )
light_energy = 0.1
spot_range = 16.7373

[node name="Bomb_Path" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.47575, 0 )
curve = SubResource( 20 )

[node name="Pause" type="Timer" parent="."]
wait_time = 5.0

[node name="Bomb Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="body_entered" from="Body/Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Pause" to="." method="resume_movement"]
[connection signal="timeout" from="Bomb Timer" to="." method="_on_Timer_timeout"]
